# ChangeUSR

./: README.md  pyproject.toml
src/changeusr/: __init__.py  __main__.py  automation.py  gui.py
